--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,24 @@
-name: spring boot CI
- on: 
-   push:
-    branches: {"master"}
-  pull_request:
-    branches: {"master"}
-jobs:
-  build:   
-    runs-on: windows-latest
-    steps:
-      -name: checkout source
-       uses: action/checkout@v3
-       -name: set up JDK 17
-       uses: actions/setup-java@v3
-       with:
-         java-version: '17'
-         distribution: 'temurin'
-      -name: Build Project with Maven
-      run: mvn clean install
+name : Spring Boot CI 
 
-      -name: Run Tests 
-      run: mvn test
+on : 
+  push : 
+    branches : ["master"]
+  pull_request : 
+    branches : ["master"]
+
+jobs :
+  build :
+    runs-on : windows-latest 
+
+    steps :
+      - name : Checkout source 
+        uses : actions/checkout@v3
+
+      - name : Set up JDK 21
+        uses : actions/setup-java@v3
+        with :
+          java-version : '21'
+          distribution : 'temurin'
+  
+      - name : Build with Maven 
+        run : mvn clean install -DskipTests
